<resources>
    <string name="app_name">7Minute Workout</string>
    <string name="start">START</string>
    <string name="start_image">Start Image</string>
    <string name="_10">10</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="_30">30</string>
    <string name="exerciseName">Exercise Name</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercisename">ExerciseName</string>
    <string name="upcoming_exercise">Upcoming Exercise:</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done_the_workout">You have done the workout!</string>
    <string name="finish">FINISH</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="popupText">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="height_in_cms">HEIGHT (in cms)</string>
    <string name="weight_in_kgs">WEIGHT (in kgs)</string>
    <string name="calculate">CALCULATE</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="validate_number_regex">^[.]{1}[0-9]+|[0-9]+|[0-9]+[.]?[0-9]+</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="weight_in_pounds">Weight (in Pounds)</string>
    <string name="history">History</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="reset_data">RESET DATA</string>
</resources>