<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/mainScreenMainLayoutPadding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/start_image"
        app:layout_constraintBottom_toTopOf="@+id/flStart"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/img_main_page"
        />
    <FrameLayout
        android:id="@+id/flStart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/item_color_accent_border_ripple_background"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center"
            android:textSize="@dimen/button_default_text_size"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBMI"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flStart"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/item_circular_color_accent_background"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:layout_gravity="center"
            android:textSize="@dimen/button_default_text_size"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/flBMI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/button_default_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

</androidx.constraintlayout.widget.ConstraintLayout>